Mobile: Fix wrong font size bug
Safari tries to enlarge the font if it "thinks" it is too small. Result:
Font size for certain elements is sometimes way too big -> Disable this
feature.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
@@ -28,6 +28,8 @@ body {
   -moz-user-select: -moz-none;
   cursor: default;
   color: @text-color;
+  /* prevent mobile safari from adjusting text, due to our dynamic layouting it will be always wrong */
+  -webkit-text-size-adjust: none;
 }
 
 /* -moz variant is required, see https://bugzilla.mozilla.org/show_bug.cgi?id=509958 */
